# Automated-Patrol-State-Machine

./: .gitignore  CMakeLists.txt  Data Flow Diagram.mmd  ENGINEERING_LOG.md  README.md  package.xml  setup.cfg  setup.py
automated_patrol_state_machine/fsm/: state.py  state_machine.py
automated_patrol_state_machine/fsm/states/: patrol_state.py
automated_patrol_state_machine/nodes/: patrol_executor.py
autonomous_patrol_system/: alert_dispatcher_node.py  cli_feedback_node.py  cyclic_patrol_node.py  environment_monitor_node.py  environment_monitor_node.py.py  evidence_capture_node.py  mission_controller_node.py
config/: alert_channels.yaml  evidence_storage.yaml  log_formats.yaml  mission_params.yaml  monitor_thresholds.yaml  patrol_config.yaml  waypoints.yaml
docs/: PROJECT_COMPLETION_TEST_PLAN.md  TESTING_GUIDE.md  development_guide.md  testing_guide.md
launch/: cyclic_patrol.launch.py  environment_monitor.launch.py  evidence_capture.launch.py  full_system.launch.py
msg/: AlertMessage.msg  AnomalyEvent.msg  MissionStatus.msg
scripts/: alert_dispatcher  cli_feedback  cyclic_patrol  environment_monitor  evidence_capture  mission_controller
srv/: SaveEvidence.srv
test/: test_flake8.py  test_pep257.py  test_runtime_contracts.py
test/unit/: test_fsm.py
