<package format="3">
  <!-- ✅ Change this -->
  <name>autonomous_patrol_system</name>
  
  <version>0.1.0</version>
  <description>Autonomous patrol system for TurtleBot4</description>
  
  <maintainer email="RAHAL.Mohamed-Yassine@tek-up.de">Yasseene</maintainer>
  <license>Apache-2.0</license>
  
  <!-- Dependencies remain the same -->
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>