[develop]
script_dir=$base/lib/autonomous_patrol_system

[install]
install_scripts=$base/lib/autonomous_patrol_system

[options.entry_points]
console_scripts =
    cyclic_patrol = autonomous_patrol_system.cyclic_patrol_node:main

[flake8]
max-line-length = 99
exclude =
    .git,
    __pycache__,
    .venv,
    build,
    install,
    log
